kube/aks/api.yaml
---
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: kernelci-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: kernelci/kernelci:api
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 8000
          command:
            - uvicorn
          args:
            - api.main:versioned_app
            - --port
            - '8000'
            - --host
            - 0.0.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kernelci-api
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: api
