kube/aks/mongo.yaml
---
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: kernelci-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          resources:
            requests:
              memory: "10Gi"
              cpu: "2"
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-persistent-storage-claim2
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: kernelci-api
spec:
  ports:
    - port: 27017
  selector:
    app: mongo
