kube/aks/ingress.yaml
---
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023-2025 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingressclass-api
  name: api-ingress
  namespace: kernelci-api
  annotations:
    cert-manager.io/cluster-issuer: all-issuer
    nginx.ingress.kubernetes.io/compression-level: "6"  # 1-9, higher = better compression
    nginx.ingress.kubernetes.io/compression-types: "application/json text/html text/plain application/javascript text/css application/x-javascript"  # MIME types to compress
    nginx.ingress.kubernetes.io/compression-min-length: "1000"  # bytes
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"  # large kunit result trees exceed the 1m default
spec:
  ingressClassName: ingressclass-api
  tls:
    - hosts:
        - kernelci-api.westus3.cloudapp.azure.com
        - api.kernelci.org
      secretName: api-tls
  rules:
    - host: kernelci-api.westus3.cloudapp.azure.com
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 8000
            path: /
            pathType: Prefix
    - host: api.kernelci.org
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 8000
            path: /
            pathType: Prefix
